# rethink-about-amp

./: Cargo.toml  README.md  pyproject.toml  test_call.py
benches/: benchmark.rs
data/: advertisers.json  amp-us-desktop.json  amp-us-phone.json  click_urls.json  fk.json  iab.json  icons.json  impression_urls.json  kw.json  title.json  urls.json
src/: blart.rs  btree.rs  common.rs  fst.rs  hybrid.rs  lib.rs  main.rs  python_bridge.rs
tests/: amp_indexers_test.rs
